--- a/config/services.yml
+++ b/config/services.yml
@@ -2,7 +2,7 @@ services:
   _defaults:
     autowire: true
 
-  Pure\PurewareCli\:
+  Pureware\PurewareCli\:
     resource: '../src'
 
   Symfony\Component\Console\Application:
