--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,6 @@
     },
     "minimum-stability": "dev",
     "prefer-stable" : true,
-    "repositories": [
-        {
-            "type": "path",
-            "url": "~/dev/private/pure/template-generator"
-        }
-    ],
     "require": {
         "php": "^7.4|^8.0",
         "guzzlehttp/guzzle": "^7",
@@ -25,7 +19,7 @@
         "symfony/string": "^6.0",
         "ext-json": "*",
         "shopware/core": "^6.4",
-        "pureware/template-generator": "@dev"
+        "pureware/template-generator": "0.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.3",
