--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.3",
         "symfony/var-dumper": "^6.0",
-        "phpstan/phpstan": "^1.9"
+        "phpstan/phpstan": "^1.9",
+        "rector/rector": "^0.14.8"
     }
 }
