--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "phpunit/phpunit": "^8.0|^9.3",
         "symfony/var-dumper": "^6.0",
         "phpstan/phpstan": "^1.9",
-        "rector/rector": "^0.14.8"
+        "rector/rector": "^0.14.8",
+        "symplify/easy-coding-standard": "^11.1"
     }
 }
