--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         "guzzlehttp/guzzle": "^7",
         "symfony/console": "^5.0|^6.0",
         "symfony/process": "^5.0|^6.0",
-        "symfony/string": "^6.0",
+        "symfony/string": "^6.0|^5.0",
         "ext-json": "*",
         "shopware/core": "^6.4",
         "shopware/storefront": "^6.4",
-        "pureware/template-generator": "0.1.0"
+        "pureware/template-generator": "0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.3",
-        "symfony/var-dumper": "^6.0",
+        "symfony/var-dumper": "^6.0|^5.0",
         "phpstan/phpstan": "^1.9",
         "rector/rector": "^0.14.8",
         "symplify/easy-coding-standard": "^11.1"
