remove gitlab template and add github action

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "type": "project",
     "license": "MIT",
     "bin": ["bin/pure"],
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "autoload": {
         "psr-4": {
             "Pureware\\PurewareCli\\": "src/"
