add php version

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,4 +32,5 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run test suite
+        php-version: 7.4
         run: composer run-script test
