--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,5 +32,6 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run test suite
-        php-version: 7.4
+        with:
+          php-version: 7.4
         run: composer run-script test
