--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,7 +12,11 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest, windows-latest, macOS-latest]
+        php-versions: ['7.2', '7.3']
 
     steps:
       - uses: actions/checkout@v3
