--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
 
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         operating-system: [macOS-latest, ubuntu-latest, windows-latest ]
         php: [ '7.4', '8.0' ]
