--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,3 +32,19 @@ jobs:
 
       - name: Run test suite on PHP ${{ matrix.php }}
         run: vendor/bin/phpunit --testdox
+
+    ecs:
+      name: Easy Coding Standard
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: ramsey/composer-install@v2
+        - run: vendor/bin/ecs
+
+    phpstan:
+      name: PHPStan
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: ramsey/composer-install@v2
+        - run: vendor/bin/phpstan
